解决label和input组成的radio位置不重合的问题

--- a/login.html
+++ b/login.html
@@ -53,11 +53,13 @@
             </div>
 
             <div class="login-radio">
-                <div>
-                    <input style="margin-bottom: -50px; width: 25px;height: 25px" type="radio" name="readed"
-                           v-model="radio" value="1"/>
+                <div style="display: flex;align-items: center" >
 
-                    <label style="position: relative;top: -25px;left: 5px;"/>
+                    <input style="margin-right: -23px; width: 25px;height: 25px" type="radio" name="readed"
+                           v-model="radio" value="1">
+
+                    <label />
+
 
                 </div>
                 <div>我已阅读并同意
