--- a/shop-detail.html
+++ b/shop-detail.html
@@ -150,7 +150,8 @@
     data: {
       util,
       shop: {},
-      vouchers: []
+      vouchers: [],
+      comment: []
     },
     created() {
       // 获取参数
