添加注册时间

--- a/info.html
+++ b/info.html
@@ -43,6 +43,7 @@
     <div class="basic-info">
       <div class="name">{{user.nickName}}</div>
       <span>杭州</span>
+      <span>注册时间：{{user.creatTime}}</span>
       <div class="edit-btn" @click="toEdit">
         编辑资料
       </div>
